@@ -20,6 +20,7 @@ import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 import javax.sql.DataSource;
 
@@ -86,7 +87,8 @@ public class DataSourcePoolMetricsAutoConfiguration {
 
 			@Override
 			public void bindTo(MeterRegistry registry) {
-				List<DataSourcePoolMetadataProvider> metadataProvidersList = this.metadataProviders.stream().toList();
+				List<DataSourcePoolMetadataProvider> metadataProvidersList = this.metadataProviders.stream()
+					.collect(Collectors.toList());
 				this.dataSources.forEach((name, dataSource) -> bindDataSourceToRegistry(name, dataSource,
 						metadataProvidersList, registry));
 			}
