@@ -24,6 +24,7 @@ import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.function.Supplier;
+import java.util.stream.Collectors;
 
 import javax.net.ssl.SSLContext;
 
@@ -235,7 +236,7 @@ public class CassandraAutoConfiguration {
 			return properties.getContactPoints()
 				.stream()
 				.map((candidate) -> formatContactPoint(candidate, properties.getPort()))
-				.toList();
+				.collect(Collectors.toList());
 		}
 		return null;
 	}
